--- a/less/nav.less
+++ b/less/nav.less
@@ -3,10 +3,9 @@ header nav {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 1rem 2rem 2rem 3rem;
+  margin: 1.8rem 3rem 0 3rem;
   @media @desktop{
     width: 100%;
-    margin: 0 auto;
     padding-right: 8%;
     }
 
@@ -16,19 +15,18 @@ header nav {
   }
 
   img {
-    width: 60px;
+    width: 100px;
     @media @desktop{
-      width: 125px;
+      width: 100px;
       margin-top: 5%;
     }
   }
 
   .pages {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
   }
 
-  .aboutLink {
-    margin-right: 4%;
-    font-size: 1.5rem;
+  .about-link {
+    margin-right: 40px;
   }
 }
